// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly (checked) 1`] = `
<Memo(Task)
  clickHandler={[Function]}
  isChecked={true}
  name="Test Task"
  removeHandler={[Function]}
>
  <li
    className="task"
  >
    <button
      className="checkbox"
      onClick={[Function]}
    >
      <span
        aria-label="check task"
        role="img"
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        ✔
      </span>
    </button>
    <span
      className="taskname"
    >
      Test Task
    </span>
    <button
      className="removeButton"
      onClick={[Function]}
    >
      x
    </button>
  </li>
</Memo(Task)>
`;

exports[`renders correctly (unchecked) 1`] = `
<Memo(Task)
  clickHandler={[Function]}
  isChecked={false}
  name="Test Task"
  removeHandler={[Function]}
>
  <li
    className="task"
  >
    <button
      className="checkbox"
      onClick={[Function]}
    >
      <span
        aria-label="check task"
        role="img"
        style={
          Object {
            "opacity": 0.1,
          }
        }
      >
        ✔
      </span>
    </button>
    <span
      className="taskname"
    >
      Test Task
    </span>
  </li>
</Memo(Task)>
`;
